--- a/pom.xml
+++ b/pom.xml
@@ -305,4 +305,11 @@
             </plugins>
         </pluginManagement>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>thirdparty</id>
+            <name>Third party Releases</name>
+            <url>http://byggserver:8081/nexus/content/repositories/thirdparty</url>
+        </repository>
+    </distributionManagement>
 </project>
